--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enter-as-tab-js",
-  "version": "0.0.1",
+  "version": "1.0.0-rc",
   "main": "enterastab.js",
   "scripts": {
     "dev": "vite",
@@ -30,5 +30,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/everton3x/enter-as-tab-js.git"
-  }
+  },
+  "directories": {
+    "example": "example"}
 }
